<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutPair"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sfondo_app_solo"
        tools:context=".PairFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/unpairedTextviewPair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/unpaired_pairing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewUnpair"
            app:layout_constraintEnd_toEndOf="@+id/recyclerViewPair"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewPair"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewPair"
            app:layout_constraintVertical_bias="0.617" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUnpair"
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:layout_marginTop="32dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewPair" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backBtnPair"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/cerchietto"
            android:backgroundTint="@color/azzurro"
            app:layout_constraintStart_toEndOf="@+id/logoDrawerPair"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/adamina"
                android:text="@string/back_button_pairing"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_100" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/patientLogoPair"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/halfcircle"
            android:backgroundTint="@color/azzurro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoDrawerPair">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hospital_bed"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/historicalLogoPair"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/halfcircle"
            android:backgroundTint="@color/azzurro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patientLogoPair">

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/folder"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsLogoPair"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/halfcircle"
            android:backgroundTint="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historicalLogoPair">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_settings_48" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/helpLogoPair"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/halfcircle"
            android:backgroundTint="@color/azzurro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsLogoPair">

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_help_outline_48" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/newDevicesTextPair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/adamina"
            android:text="@string/paired_pairing"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/recyclerViewPair"
            app:layout_constraintStart_toStartOf="@+id/recyclerViewPair"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPair"
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newDevicesTextPair" />

        <RelativeLayout
            android:id="@+id/updateRelativePair"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bolla"
            app:layout_constraintBottom_toBottomOf="@+id/btIconPairRelative"
            app:layout_constraintEnd_toStartOf="@+id/btIconPairRelative">

            <ImageView
                android:id="@+id/updateIconPair"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="31dp"
                app:srcCompat="@drawable/ic_baseline_update_100" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btIconPairRelative"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bolla"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btIconPair"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="31dp"
                app:srcCompat="@drawable/ic_baseline_bluetooth_100" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/adamina"
            android:text="@string/title_pairing"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_bluetooth_100"
            app:layout_constraintStart_toEndOf="@+id/logoDrawerPair"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/holo_orange_dark" />

        <ImageView
            android:id="@+id/logoDrawerPair"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_follow_the_signs_100"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>